# youtube-video-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  N8N_SETUP_GUIDE.md  README.md  docker-compose.yml  n8n-cloud-native-workflow.json  n8n-workflow-template.json  pyproject.toml
.github/workflows/: generate-video.yml
src/ai_video_agent/: __init__.py  __main__.py  config.py  main.py
src/ai_video_agent/application/: __init__.py  image_service.py  pipeline_service.py  script_service.py  video_service.py  voiceover_service.py  youtube_service.py
src/ai_video_agent/domain/: __init__.py  defaults.py  models.py  prompts.py
src/ai_video_agent/infrastructure/: __init__.py
src/ai_video_agent/infrastructure/api/: __init__.py  router.py
src/ai_video_agent/infrastructure/monitoring/: __init__.py  logger.py
tests/: test_pipeline_service.py
